# BasicOfProgrammingCourse

./: CMakeLists.txt  exit  main.c
libs/algorithms/: CMakeLists.txt  algorithms.c  algorithms.h
libs/algorithms/array/: array.c  array.h  ordered_array.c  ordered_array.h  unordered_array.c  unordered_array.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/bitset/: bitset.c  bitset.h
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/vector/: vector.c  vector.h  vectorVoid.c  vectorVoid.h
string/: string_.c  string_.h
